--- a/nanobind_jsonConfig.cmake.in
+++ b/nanobind_jsonConfig.cmake.in
@@ -1,5 +1,5 @@
- ############################################################################
-# Copyright (c) 2019, Martin Renou                                         #
+############################################################################
+# Copyright (c) 2019, Martin Renou, Ian Bell                               #
 #                                                                          #
 # Distributed under the terms of the BSD 3-Clause License.                 #
 #                                                                          #
