--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -1,19 +1,22 @@
-name: Tests
-
-on:
-  push:
-    branches:
-    - master
-  pull_request:
-    branches:
-    - master
+name: run_tests
 
 defaults:
   run:
-    shell: bash -l {0}
+    shell: bash
+
+on:
+  push:
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
+  schedule:
+    - cron: '0 13 * * 4'
+  release:
+    types: [published]
 
 jobs:
-  run:
+  run_tests:
+    name: Build and run tests on ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
 
     strategy:
@@ -25,12 +28,22 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
-    - uses: prefix-dev/setup-pixi@v0.5.1
+    - name: Setup Python ${{ matrix.python }}
+      uses: actions/setup-python@v5
       with:
-        cache: false
+        python-version: ${{ matrix.python }}
+        cache: 'pip'
 
-    - name: Run build
-      run: pixi run build
+    - name: Install pytest
+      run: pythom -m pip install pytest
+    
+    - name: Configure CMake
+      run: cmake -S $GITHUB_WORKSPACE -B $GITHUB_WORKSPACE/build/ -DBUILD_TESTS=1
+
+    - name: Build test modules
+      run: cmake --build $GITHUB_WORKSPACE/build/
 
     - name: Run tests
-      run: pixi run test
+      run: |
+        cd build
+        python -m pytest ../tests
