--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -35,7 +35,7 @@ jobs:
         cache: 'pip'
 
     - name: Install pytest
-      run: pythom -m pip install pytest
+      run: python -m pip install pytest
     
     - name: Configure CMake
       run: cmake -S $GITHUB_WORKSPACE -B $GITHUB_WORKSPACE/build/ -DBUILD_TESTS=1
