--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,22 +20,27 @@ set(${PROJECT_NAME}_VERSION ${${PROJECT_NAME}_VERSION_MAJOR}.${${PROJECT_NAME}_V
 ################
 
 include(FetchContent)
-        FetchContent_Declare(
+        
+FetchContent_Declare(
         nanobind
         GIT_REPOSITORY https://github.com/wjakob/nanobind.git
 )
 
+FetchContent_Declare(
+        nlohmann_json
+        GIT_REPOSITORY https://github.com/nlohmann/json.git
+)
+
 FetchContent_MakeAvailable(nanobind)
+FetchContent_MakeAvailable(nlohmann_json)
 
 set(nanobind_REQUIRED_VERSION 2.2.0)
 set(nlohmann_json_REQUIRED_VERSION 3.2.0)
 
 if (NOT TARGET nanobind::headers)
 find_package(Python COMPONENTS Interpreter Development REQUIRED)
-# find_package(nanobind CONFIG REQUIRED)
 endif()
 if (NOT TARGET nlohmann_json)
-find_package(nlohmann_json ${nlohmann_json_REQUIRED_VERSION} REQUIRED)
 endif()
 
 ##########
