--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -79,7 +79,7 @@ OPTION(BUILD_TESTS "nanobind_json test suite" OFF)
 
 if(BUILD_TESTS)
         include_directories(include)
-        nanobind_add_module(test_json_ext test/test_json.cpp STABLE_ABI)
+        nanobind_add_module(test_json_ext tests/test_json.cpp STABLE_ABI)
 endif()
 
 ################
