--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,8 +33,7 @@ FetchContent_Declare(
 
 FetchContent_MakeAvailable(nanobind nlohmann_json)
 
-add_library (nlohmann_json)
-target_include_directories(nlohmann_json PUBLIC "${CMAKE_CURRENT_LIST_DIR}/include")
+target_include_directories(nlohmann_json INTERFACE "${CMAKE_CURRENT_LIST_DIR}/include")
 
 set(nanobind_REQUIRED_VERSION 2.2.0)
 set(nlohmann_json_REQUIRED_VERSION 3.2.0)
