--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -22,7 +22,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        os: [windows-latest]
         python-version: ["3.7", "3.9", "3.11", "3.12"]
 
     steps:
@@ -41,7 +41,10 @@ jobs:
       run: cmake -S $GITHUB_WORKSPACE -B $GITHUB_WORKSPACE/build/ -DBUILD_TESTS=1
 
     - name: Build test modules
-      run: cmake --build $GITHUB_WORKSPACE/build/
+      run: |
+        cmake --build $GITHUB_WORKSPACE/build/
+        ls
+        ls build
 
     - name: Run tests
       run: |
