enable tmate session

--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -46,6 +46,9 @@ jobs:
         ls
         ls build
 
+    - name: Setup tmate session
+      uses: mxschmitt/action-tmate@v3
+
     - name: Run tests
       run: |
         cd build
