--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -51,5 +51,5 @@ jobs:
 
     - name: Run tests
       run: |
-        cd build
-        python -m pytest ../tests
+        cd build/Debug
+        python -m pytest ../../tests
