--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -46,6 +46,11 @@ jobs:
         ls
         ls build
 
+    - name: Download Dependencies CLI
+      run: |
+        curl -L -o dependencies.zip https://github.com/lucasg/Dependencies/releases/download/1.12.0/Dependencies-v1.12.0-x64.zip
+        tar -xf dependencies.zip
+
     - name: Setup tmate session
       uses: mxschmitt/action-tmate@v3
 
