--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -82,6 +82,7 @@ OPTION(BUILD_TESTS "nanobind_json test suite" OFF)
 
 if(BUILD_TESTS)
         include_directories(include)
+        set(CMAKE_GENERATOR_PLATFORM x64)
         set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreadedDLL")
         nanobind_add_module(test_json_ext tests/test_json.cpp STABLE_ABI)
 endif()
