--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -46,10 +46,7 @@ jobs:
         ls
         ls build
 
-    - name: Setup tmate session
-      uses: mxschmitt/action-tmate@v3
-
     - name: Run tests
       run: |
-        cd build/Debug
+        cd build/Release
         python -m pytest ../../tests
