--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,6 +15,11 @@ set(${PROJECT_NAME}_VERSION_MINOR 0)
 set(${PROJECT_NAME}_VERSION_PATCH 1)
 set(${PROJECT_NAME}_VERSION ${${PROJECT_NAME}_VERSION_MAJOR}.${${PROJECT_NAME}_VERSION_MINOR}.${${PROJECT_NAME}_VERSION_PATCH})
 
+set(CMAKE_GENERATOR_PLATFORM x64)
+set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreadedDLL")
+set(CMAKE_BUILD_TYPE Release)
+set(CMAKE_CONFIGURATION_TYPES Release)
+
 ################
 # Dependencies #
 ################
@@ -82,10 +87,6 @@ OPTION(BUILD_TESTS "nanobind_json test suite" OFF)
 
 if(BUILD_TESTS)
         include_directories(include)
-        set(CMAKE_GENERATOR_PLATFORM x64)
-        set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreadedDLL")
-        set(CMAKE_BUILD_TYPE Release)  # Jeśli używasz single-config generatora
-        set(CMAKE_CONFIGURATION_TYPES Release) 
         nanobind_add_module(test_json_ext tests/test_json.cpp STABLE_ABI)
 endif()
 
