--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -34,10 +34,15 @@ jobs:
         python-version: ${{ matrix.python-version }}
         cache: 'pip'
 
-    - name: Install VC Redistributable
+    # - name: Install VC Redistributable
+    #   run: |
+    #     curl -L -o vc_redist.x64.exe https://aka.ms/vs/17/release/vc_redist.x64.exe
+    #     ./vc_redist.x64.exe /install /quiet /norestart
+
+    - name: Set environment
       run: |
-        curl -L -o vc_redist.x64.exe https://aka.ms/vs/17/release/vc_redist.x64.exe
-        ./vc_redist.x64.exe /install /quiet /norestart
+        export PATH=$PWD/build/Release:$PATH
+        export PYTHONPATH=$PWD/build/Release
 
     - name: Install pytest
       run: python -m pip install pytest
