--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -23,26 +23,15 @@ jobs:
       fail-fast: false
       matrix:
         os: [windows-latest]
-        python-version: ["3.9", "3.11", "3.12"]
+        python: ["3.9", "3.11", "3.12"]
 
     steps:
     - uses: actions/checkout@v4
 
-    - name: Setup Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v5
+    - name: Setup Python ${{ matrix.python }}
+      uses: actions/setup-python@v6
       with:
-        python-version: ${{ matrix.python-version }}
-        cache: 'pip'
-
-    # - name: Install VC Redistributable
-    #   run: |
-    #     curl -L -o vc_redist.x64.exe https://aka.ms/vs/17/release/vc_redist.x64.exe
-    #     ./vc_redist.x64.exe /install /quiet /norestart
-
-    # - name: Set environment
-    #   run: |
-    #     export PATH=$PWD/build/Release:$PATH
-    #     export PYTHONPATH=$PWD/build/Release
+        python-version: ${{ matrix.python }}
 
     - name: Install pytest
       run: python -m pip install pytest
