--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -23,15 +23,15 @@ jobs:
       fail-fast: false
       matrix:
         os: [windows-latest]
-        python: ["3.9", "3.11", "3.12"]
+        python-version: ["3.9", "3.11", "3.12", "3.13"]
 
     steps:
     - uses: actions/checkout@v4
 
-    - name: Setup Python ${{ matrix.python }}
-      uses: actions/setup-python@v6
+    - name: Setup Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v5
       with:
-        python-version: ${{ matrix.python }}
+        python-version: ${{ matrix.python-version }}
 
     - name: Install pytest
       run: python -m pip install pytest
