--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -45,14 +45,14 @@ jobs:
         cmake --build $GITHUB_WORKSPACE/build/
 
     - name: Run tests
-      if: ${{ !startsWith(matrix.os, "windows") }}
+      if: ${{ !startsWith(matrix.os, 'windows') }}
       run: |
         cd build/
         python -m pytest ../tests
 
     # TODO: Run on other Python versions on Windows (Missing/not-matching DLLs error)
     - name: Run tests
-      if: ${{ !startsWith(matrix.os, "windows") }} && matrix.python == "3.13"
+      if: ${{ !startsWith(matrix.os, 'windows') }} && matrix.python == "3.13"
       run: |
         cd build/Debug
         python -m pytest ../../tests
