--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -83,6 +83,7 @@ OPTION(BUILD_TESTS "nanobind_json test suite" OFF)
 if(BUILD_TESTS)
         include_directories(include)
         nanobind_add_module(test_json_ext tests/test_json.cpp STABLE_ABI)
+        target_link_libraries(${PROJECT_NAME})
 endif()
 
 ################
