--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -83,7 +83,7 @@ OPTION(BUILD_TESTS "nanobind_json test suite" OFF)
 if(BUILD_TESTS)
         include_directories(include)
         nanobind_add_module(test_json_ext tests/test_json.cpp STABLE_ABI)
-        target_link_libraries(test_json_ext PRIVATE ${PROJECT_NAME} nanobind-static nlohmann_json)
+        target_link_libraries(test_json_ext PRIVATE ${PROJECT_NAME} nanobind-static nlohmann_json ${PYTHON_INCLUDE_DIRS})
 endif()
 
 ################
