--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -84,6 +84,7 @@ if(BUILD_TESTS)
         include_directories(include)
         nanobind_add_module(test_json_ext tests/test_json.cpp STABLE_ABI)
         target_link_libraries(test_json_ext PRIVATE ${PROJECT_NAME} nanobind-static nlohmann_json ${PYTHON_INCLUDE_DIRS})
+        target_include_directories(test_json_ext ${PYTHON_INCLUDE_DIRS})
 endif()
 
 ################
