--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -1,36 +1,57 @@
-name: Tests
-
-on:
-  push:
-    branches:
-    - master
-  pull_request:
-    branches:
-    - master
+name: run_tests
 
 defaults:
   run:
-    shell: bash -l {0}
+    shell: bash
+
+on:
+  push:
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
+  schedule:
+    - cron: '0 13 * * 4'
+  release:
+    types: [published]
 
 jobs:
-  run:
+  run_tests:
+    name: Build and run tests on ${{ matrix.os }} with Python ${{ matrix.python }}
     runs-on: ${{ matrix.os }}
 
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
-        python-version: ["3.7", "3.9", "3.11", "3.12"]
+        os: [ubuntu-latest, windows-latest, macos-latest]
+        python: ["3.8", "3.9", "3.10", "3.11", "3.12", "3.13"]
 
     steps:
     - uses: actions/checkout@v4
 
-    - uses: prefix-dev/setup-pixi@v0.5.1
+    - name: Setup Python ${{ matrix.python }}
+      uses: actions/setup-python@v5
       with:
-        cache: false
+        python-version: ${{ matrix.python }}
+        check-latest: false
 
-    - name: Run build
-      run: pixi run build
+    - name: Install pytest
+      run: python -m pip install pytest
+    
+    - name: Configure CMake
+      run: cmake -S $GITHUB_WORKSPACE -B $GITHUB_WORKSPACE/build/ -DBUILD_TESTS=1
+
+    - name: Build test modules
+      run: |
+        cmake --build $GITHUB_WORKSPACE/build/
 
     - name: Run tests
-      run: pixi run test
+      if: ${{ !startsWith(matrix.os, 'windows') }}
+      run: |
+        cd build/
+        python -m pytest ../tests
+
+    - name: Run tests
+      if: ${{ startsWith(matrix.os, 'windows') }}
+      run: |
+        cd build/Debug
+        python -m pytest ../../tests
