--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -22,7 +22,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
+        os: [ubuntu-latest, ubuntu-24.04-arm, windows-latest, macos-latest]
         python: ["3.8", "3.9", "3.10", "3.11", "3.12", "3.13"]
 
     steps:
@@ -41,8 +41,7 @@ jobs:
       run: cmake -S $GITHUB_WORKSPACE -B $GITHUB_WORKSPACE/build/ -DBUILD_TESTS=1
 
     - name: Build test modules
-      run: |
-        cmake --build $GITHUB_WORKSPACE/build/
+      run: cmake --build $GITHUB_WORKSPACE/build/
 
     - name: Run tests
       if: ${{ !startsWith(matrix.os, 'windows') }}
