--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -38,7 +38,7 @@ jobs:
       run: python -m pip install pytest
     
     - name: Configure CMake
-      run: cmake -S $GITHUB_WORKSPACE -B $GITHUB_WORKSPACE/build/ -DBUILD_TESTS=1
+      run: cmake -S $GITHUB_WORKSPACE -B $GITHUB_WORKSPACE/build/ -DNBJSON_TESTS=1
 
     - name: Build test modules
       run: |
